replacing the fancing ims

--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
             <div class="swiper-container">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img src="https://cdn.pixabay.com/photo/2020/06/21/14/06/garden-5324882_1280.jpg" alt="Fencing Installation 1" data-modal="modal1">
+                        <img src="./img/fance-img-1.jpeg" alt="Fencing Installation 1" data-modal="modal1">
                     </div>
                     <div class="swiper-slide">
-                        <img src="https://cdn.pixabay.com/photo/2016/11/29/12/27/fence-1867175_1280.jpg" alt="Fencing Installation 2" data-modal="modal2">
+                        <img src="./img/fance-img-2.jpeg" alt="Fencing Installation 2" data-modal="modal2">
                     </div>
                     <div class="swiper-slide">
-                        <img src="https://cdn.pixabay.com/photo/2017/09/07/08/54/fence-2725317_1280.jpg" alt="Fencing Installation 3" data-modal="modal3">
+                        <img src="./img/fance-img-3.jpeg" alt="Fencing Installation 3" data-modal="modal3">
                     </div>
                 </div>
                 <!-- Add Pagination -->
