--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
             <div class="swiper-container">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img src="https://cdn.pixabay.com/photo/2016/03/31/18/48/satellite-dish-1294622_1280.png" alt="DSTV Installation 1" data-modal="modal4">
+                        <img src="./img/dstv-img-2.jpeg" alt="DSTV Installation 1" data-modal="modal4">
                     </div>
                     <div class="swiper-slide">
-                        <img src="https://cdn.pixabay.com/photo/2017/09/25/09/13/tv-2785992_1280.jpg" alt="DSTV Installation 2" data-modal="modal5">
+                        <img src="./img/dstv-img-3.jpeg" alt="DSTV Installation 2" data-modal="modal5">
                     </div>
                     <div class="swiper-slide">
-                        <img src="https://cdn.pixabay.com/photo/2014/12/27/15/40/satellite-581690_1280.jpg" alt="DSTV Installation 3" data-modal="modal6">
+                        <img src="./img/dstv-img-4.jpeg" alt="DSTV Installation 3" data-modal="modal6">
                     </div>
                 </div>
                 <!-- Add Pagination -->
