last version off the website

--- a/index.html
+++ b/index.html
@@ -1,17 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Expert Fencing & Gates Installers and DSTV Technicians. Offering reliable services in Durban and surrounding areas.">
-    <meta name="keywords" content="fencing, gates, DSTV, installation, repairs, Hillcrest, Kloof, Durban, Umhlanga, Ballito">
+    <meta name="description"
+        content="Expert Fencing & Gates Installers and DSTV Technicians. Offering reliable services in Durban and surrounding areas.">
+    <meta name="keywords"
+        content="fencing, gates, DSTV, installation, repairs, Hillcrest, Kloof, Durban, Umhlanga, Ballito">
     <title>Fencing & DSTV Services | Durban and Surrounding Areas</title>
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.5.1/uicons-brands/css/uicons-brands.css'>
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.5.1/uicons-solid-rounded/css/uicons-solid-rounded.css'>
     <link rel="stylesheet" href="./css/style.css">
     <script src="./js/app.js" defer></script>
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
 </head>
+
 <body>
+    <!-- Floating Action Buttons -->
+    <div class="fixed-contact-buttons">
+        <a href="https://wa.me/27677143613" target="_blank" class="btn whatsapp-btn">
+            <i class="fi fi-brands-whatsapp"></i>
+        </a>
+        <a href="tel:+27677143613" class="btn call-btn">
+            <i class="fi fi-sr-phone-call"></i>
+        </a>
+    </div>
+
     <!-- Header Section -->
     <header>
         <div class="container">
@@ -47,7 +63,9 @@
                 <!-- Add Pagination -->
                 <div class="swiper-pagination"></div>
             </div>
-            <p>Looking for reliable fencing contractors? We specialize in installing, repairing, and maintaining fences and gates to secure your property. Our experienced team ensures quality work and customer satisfaction.</p>
+            <p>Looking for reliable fencing contractors? We specialize in installing, repairing, and maintaining fences
+                and gates to secure your property. Our experienced team ensures quality work and customer satisfaction.
+            </p>
             <ul>
                 <li>Fence Installations</li>
                 <li>Fencing Repairs</li>
@@ -76,7 +94,8 @@
                 <!-- Add Pagination -->
                 <div class="swiper-pagination"></div>
             </div>
-            <p>Get your DSTV set up by professionals. We offer comprehensive DSTV services, including installations, repairs, and troubleshooting. Whether it's a new setup or a signal issue, we've got you covered.</p>
+            <p>Get your DSTV set up by professionals. We offer comprehensive DSTV services, including installations,
+                repairs, and troubleshooting. Whether it's a new setup or a signal issue, we've got you covered.</p>
             <ul>
                 <li>Dstv Installation</li>
                 <li>Signal Reset</li>
@@ -146,19 +165,12 @@
     <section id="contact">
         <div class="container">
             <h2>Contact Us</h2>
-            <p>Ready to get started? Contact us today for a free consultation or to book a service. We’re here to help!</p>
-            <form id="contactForm">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
-
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-
-                <label for="message">Message:</label>
-                <textarea id="message" name="message" required></textarea>
-
-                <button type="submit">Submit</button>
-            </form>
+            <p>Need assistance? Get in touch with us directly via WhatsApp or give us a call.</p>
+            <div class="contact-buttons">
+                <a href="https://wa.me/27677143613" target="_blank" class="btn whatsapp-btn">Contact via
+                    WhatsApp</a>
+                <a href="tel:+27677143613" class="btn call-btn">Call Us Directly</a>
+            </div>
         </div>
     </section>
 
@@ -174,4 +186,5 @@
     <!-- Leaflet JS -->
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
 </body>
+
 </html>
